--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,36 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .lead {
-            padding-top: 10px;
-            padding-bottom: 10px;
-            padding-left: 6px;
-            padding-right: 6px;
-            margin-top: 10px;
-            background-color: #f6f6f6;
-            width: 100%;
-        }
-    </style>
-</head>
+{% extends "base.html" %}
 
-<body>
-    <a href='/leads'>Go back to leads</a>
+{% block content %}
+    <a href='{% url 'leads:lead-list' %}'>Go back to leads</a>
+
     <hr />
     <h1>Create a new lead</h1>
+    
     <form method='post'>
         {% csrf_token %}
         {{ form.as_p }}
-        <button type='submit'>submit</button>
+            <button type='submit' class="mt-3 flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">
+                submit
+            </button>
+        {% comment %} <button type='submit'>submit</button> {% endcomment %}
     </form>
-
-    {% comment %} <p>This persons age: {{ lead.age }}</p> {% endcomment %}
-
-    {% comment %} {{ leads }} {% endcomment %}
-    {% comment %} {{ age }} {% endcomment %}
-
-</body>
-</html>
+{% endblock content %}
