--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static '' %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM PROJECT</title>
 
-    <link href="{% 'css/style.css %}" rel="stylesheet">
-    <script src="{% 'js/script.js %}"></script>
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/script.js' %}"></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
-
 
     {% comment %} <style>
         .lead {
