trying a tailwind table

--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -41,4 +41,48 @@
             </div>
         </div>
     </section>
+
+
+
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg"   >
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+                <th scope="col" class="px-6 py-3">
+                    Lead Name
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Age
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Agent
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for lead in leads %}
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    {{ lead.first_name }} {{ lead.last_name }}
+                </th>
+                <td class="px-6 py-4">
+                    {{ lead.age }}
+                </td>
+                <td class="px-6 py-4">
+                    {{ lead.agent }}
+                </td>
+                <td class="px-6 py-4">
+                    <a href="{% url 'leads:lead-update' lead.pk %}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+
+
 {% endblock content %}
