lots of updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <script src="{% static 'js/script.js' %}"></script>
 
+    <link rel="stylesheet" href="{% static 'css/tailwind-output.css' %}">
+
     <script src="https://cdn.tailwindcss.com"></script>
 
     {% comment %} <style>
