--- a/agents/templates/agents/agent_update.html
+++ b/agents/templates/agents/agent_update.html
@@ -25,7 +25,7 @@
             <button type='submit' class="mt-3 flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">
                 Update Lead
             </button>
-            <a href="#" class="mt-3 flex ml-auto text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">
+            <a href="{% url 'agents:agent-delete' agent.pk %}" class="mt-3 flex ml-auto text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">
                 Delete Lead
             </a>
           </div>
@@ -39,7 +39,7 @@
 
 
 
-    <a href='{% url 'leads:lead-list' %}'>Go back to leads</a>
+    <a href='{% url 'agents:agent-list' %}'>Go back to agents</a>
 
     {% comment %} <hr />
     <h1>This is the details of {{ lead.first_name }}</h1>
