--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,39 +7,42 @@
         <span class="ml-3 text-xl">CRM PROJECT</span>
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        {% if not request.user.is_authenticated %}
-          <a href='{% url 'signup' %}' class="mr-5 hover:text-gray-900">Signup</a>
+          {% if not request.user.is_authenticated %}
+            <a href='{% url 'signup' %}' class="mr-5 hover:text-gray-900">Signup</a>
+          {% else %}
+            {% if request.user.is_organisor %}
+              <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900">Agent</a>
+            {% endif %}
+              <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900">Leads</a>
+          {% endif %}
+        
+        
+        {% if request.user.is_authenticated %}
+          <p>Logged in as: {{ request.user.username }}</p>
+          {% comment %} <a href='{% url 'logout' %}' class="ml-3 inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+            Logout
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                  <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+          </a> {% endcomment %}
+          <form method="post" action="{% url 'logout' %}" class="inline">
+            {% csrf_token %}
+            <button type="submit" class="ml-3 inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+              Logout
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </button>
+          </form>
+
         {% else %}
-          <a href="{% url 'agents:agent-list' %}" class="mr-5 hover:text-gray-900">Agent</a>
-          <a href="{% url 'leads:lead-list' %}" class="mr-5 hover:text-gray-900">Leads</a>
+          <a href='{% url 'login' %}' class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+            Login
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                  <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+          </a>
         {% endif %}
       </nav>
-      
-      {% if request.user.is_authenticated %}
-        <p>Logged in as: {{ request.user.username }}</p>
-        {% comment %} <a href='{% url 'logout' %}' class="ml-3 inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-          Logout
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-        </a> {% endcomment %}
-        <form method="post" action="{% url 'logout' %}" class="inline">
-          {% csrf_token %}
-          <button type="submit" class="ml-3 inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-            Logout
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-              <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </button>
-        </form>
-
-      {% else %}
-        <a href='{% url 'login' %}' class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-          Login
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-        </a>
-      {% endif %}
     </div>
 </header>
