added form styling

--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -30,12 +30,12 @@
             <span class="ml-auto text-gray-900">{{ lead.agent }}</span>
           </div>
           <div class="flex border-t border-gray-200 py-2">
-            <span class="text-gray-500">Location</span>
-            <span class="ml-auto text-gray-900">Dummy location</span>
+            <span class="text-gray-500">email</span>
+            <span class="ml-auto text-gray-900">{{ lead.email }}</span>
           </div>
           <div class="flex border-t border-b mb-6 border-gray-200 py-2">
-            <span class="text-gray-500">Cellphone</span>
-            <span class="ml-auto text-gray-900">+9876543210</span>
+            <span class="text-gray-500">Phone number</span>
+            <span class="ml-auto text-gray-900">{{ lead.phone_number }}</span>
           </div>
           <div class="flex">
             {% comment %} <button class="flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Button</button>
