--- a/agents/templates/agents/agent_create.html
+++ b/agents/templates/agents/agent_create.html
@@ -1,17 +1,20 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-    <a href='{% url 'agents:agent-list' %}'>Go back to agent</a>
-
-    <hr />
-    <h1>Create a new agent</h1>
-    
-    <form method='post'>
-        {% csrf_token %}
-        {{ form.as_p }}
-            <button type='submit' class="mt-3 flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">
+    <div class="max-w-lg mx-auto">
+        <div class="py-5 border-b border-gray-200">
+            <a href='{% url 'agents:agent-list' %}'>Go back to agent</a>
+        </div>
+        
+        <h1 class="text-4xl text-gray-800">Create a new agent</h1>
+        <form method='post'>
+            {% csrf_token %}
+            {{ form | crispy }}
+            <button type='submit' class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">
                 submit
             </button>
-        {% comment %} <button type='submit'>submit</button> {% endcomment %}
-    </form>
+            {% comment %} <button type='submit'>submit</button> {% endcomment %}
+        </form>
+    </div>
 {% endblock content %}
