--- a/leads/templates/leads/lead_category_update.html
+++ b/leads/templates/leads/lead_category_update.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 <section class="text-gray-600 body-font overflow-hidden">
@@ -18,20 +19,14 @@
                 Update Details
             </a>
           </div>
-          <form method='post'>
-            {% csrf_token %}
-            {{ form.as_p }}
-            <div class="flex">
-            <button type='submit' class="mt-3 flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">
-                Update Lead
-            </button>
-            <a href="{% url 'leads:lead-delete' lead.pk %}" class="mt-3 flex ml-auto text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">
-                Delete Lead
-            </a>
+            <form method='post'>
+                {% csrf_token %}
+                {{ form | crispy }}
+                <button type='submit' class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">
+                    Update Lead
+                </button>
+            </form>
           </div>
-        </form>
-          
-        </div>
         <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
       </div>
     </div>
