--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,17 +1,21 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-    <a href='{% url 'leads:lead-list' %}'>Go back to leads</a>
 
-    <hr />
-    <h1>Create a new lead</h1>
-    
-    <form method='post'>
-        {% csrf_token %}
-        {{ form.as_p }}
-            <button type='submit' class="mt-3 flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">
-                submit
-            </button>
-        {% comment %} <button type='submit'>submit</button> {% endcomment %}
-    </form>
+    <div class="max-w-lg mx-auto">
+        <a class="hover:text-blue-500"href='{% url 'leads:lead-list' %}'>Go back to leads</a>
+        <hr />
+        <div class="py-5 border-t border-gray-300">
+            <h1 class="text-4xl text-gray-800">Create a new lead</h1>
+        </div>
+        <form method='post' class="mt-5">
+            {% csrf_token %}
+            {{ form | crispy }}
+                <button type='submit' class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">
+                    submit
+                </button>
+            {% comment %} <button type='submit'>submit</button> {% endcomment %}
+        </form>
+    </div>
 {% endblock content %}
