--- a/leads/templates/leads/lead_delete.html
+++ b/leads/templates/leads/lead_delete.html
@@ -1,22 +1,19 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-    <a href="{% url 'leads:lead-list' %}">Go back to leads</a>
-
-    <hr />
-    <h1>Are you sure you want to delete this lead?</h1>
-    
-    <form method='post'>
-        {% csrf_token %}
-        {{ form.as_p }}
-        <div class="flex">
-            <button type='submit' class="mt-3 flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">
-                Yes
-            </button>
-            <a href="{% url 'leads:lead-list' %}" class="mt-3 flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded"">
-                No
-            </a>
+    <div class="max-w-lg mx-auto">
+        <div class="py-5 border-t border-gray-300">
+            <a class="hover:text-blue-500"href='{% url 'leads:lead-list' %}'>Go back to leads</a>
         </div>
-        {% comment %} <button type='submit'>submit</button> {% endcomment %}
-    </form>
+        <h1 class="text-3xl text-gray-800">Are you sure you want to delete this lead?</h1>
+        <form method='post'class="mt-5">
+            {% csrf_token %}
+            {{ form | crispy }}
+                <button type='submit' class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">
+                    Submit
+                </button>
+            {% comment %} <button type='submit'>submit</button> {% endcomment %}
+        </form>
+    </div>
 {% endblock content %}
