--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -63,7 +63,7 @@
                                         {{ lead.first_name }} {{ lead.last_name }}
                                     </h2>
                                     <p class="leading-relaxed text-base">
-                                        Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.
+                                        {{ lead.description }}
                                     </p>
                                     <a href="{% url 'leads:assign-agent' lead.pk %}" class="mt-3 text-indigo-500 inline-flex items-center">
                                         Assign an agent
