--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,21 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-    <hr />
-    <a href="{% url 'reset-password' %}">Forgot password?</a>
-</form>
+<div class="max-w-lg mx-auto">
+    <form method="post">
+        {% csrf_token %}
+        {{ form | crispy }}
+        <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">
+            Login
+        </button>
+    </form>
+    <div class="mt-5 py-5 border-t border-gray-300">
+        <a href="{% url 'reset-password' %}" class="hover:text-blue-600 mt-3">Forgot password?</a>
+        <br>
+        <a href="{% url 'signup' %}" class="hover:text-blue-600 mt-3">Don't have an account? Register</a>
+    </div>
+</div>
 
 {% endblock content %}
