--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-<h2>Enter your new password</h2>
-
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Reset Password</button>
-    <hr>
-    <a href="{% url 'login' %}">Confirm new password</a>
-</form>
+<div class="max-w-lg mx-auto">
+    <h1 class="text-4xl text-gray-800">Enter your new password</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form | crispy }}
+        <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">
+            Confirm new password
+        </button>
+    </form>
+</div>
 
 {% endblock content %}
