--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,13 +1,26 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Reset Password</button>
-    <hr>
-    <a href="{% url 'login' %}">Already have an account?</a>
-</form>
+<div class="max-w-lg mx-auto">
+    <h1 class="text-4xl text-gray-800">Reset your password</h1>
+    <form method="post" class="mt-5">
+        {% csrf_token %}
+        {{ form | crispy }}
+        <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">
+            Reset Password
+        </button>
+    </form>
+    <div class="mt-5 py-5 border-t border-gray-300">
+        <a href="{% url 'login' %}" class="hover:text-blue-600 mt-3">
+            Already have an account?
+        </a>
+        <br>
+        <a href="{% url 'signup' %}" class="hover:text-blue-600 mt-3">
+            Don't have an account? Register
+        </a>
+    </div>
+</div>
 
 {% endblock content %}
