--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,11 +1,25 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Signup</button>
-</form>
+<div class="max-w-lg mx-auto">
+    <form method="post">
+        {% csrf_token %}
+        {{ form | crispy }}
+        <button type="submit" class="w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md text-white">
+            Signup
+        </button>
+    </form>
+    <div class="mt-5 py-5 border-t border-gray-300">
+        <a href="{% url 'login' %}" class="hover:text-blue-600 mt-3">
+            Already have an account? login
+        </a>
+        <br>
+        <a href="{% url 'reset-password' %}" class="hover:text-blue-600 mt-3">
+            Forgot password?
+        </a>
+    </div>
+</div>
 
 {% endblock content %}
