remove cdn tailwind

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="{% static 'css/tailwind-output.css' %}">
 
-    <script src="https://cdn.tailwindcss.com"></script>
+    {% comment %} <script src="https://cdn.tailwindcss.com"></script> {% endcomment %}
 
     {% comment %} <style>
         .lead {
