--- a/templates/landing.html
+++ b/templates/landing.html
@@ -2,13 +2,13 @@
 {% block content %}
 <section class="text-gray-600 body-font">
     <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-      <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+      {% comment %} <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600"> {% endcomment %}
       <div class="text-center lg:w-2/3 w-full">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
-            CRM web-app build with Django
+            Welcome to the CRM project
         </h1>
         <p class="mb-8 leading-relaxed">
-            This CRM helps you manage your leads.
+            This is a dockerized CRM app built with django and helps you manage leads/agents depending on user role.
         </p>
         <div class="flex justify-center">
           <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
