--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,7 +8,7 @@
             Welcome to the CRM project
         </h1>
         <p class="mb-8 leading-relaxed">
-            This is a dockerized CRM app built with django and helps you manage leads/agents depending on user role.
+            This simple CRM app helps you manage leads/agents depending on user role.
         </p>
         <div class="flex justify-center">
           <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
