--- a/agents/templates/agents/agent_create.html
+++ b/agents/templates/agents/agent_create.html
@@ -2,7 +2,7 @@
 {% load tailwind_filters %}
 
 {% block content %}
-    <div class="max-w-lg mx-auto">
+    <div class="max-w-lg mx-auto px-5">
         <div class="py-5 border-b border-gray-200">
             <a href='{% url 'agents:agent-list' %}'>Go back to agent</a>
         </div>
