--- a/agents/templates/agents/agent_delete.html
+++ b/agents/templates/agents/agent_delete.html
@@ -2,7 +2,7 @@
 {% load tailwind_filters %}
 
 {% block content %}
-    <div class="max-w-lg mx-auto">
+    <div class="max-w-lg mx-auto px-5">
         <div class="py-5 border-t border-gray-300">
             <a class="hover:text-blue-500"href='{% url 'agents:agent-list' %}'>Go back to agents</a>
         </div>
