--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <div class="max-w-lg mx-auto">
+    <div class="max-w-lg mx-auto px-5">
         <a class="hover:text-blue-500"href='{% url 'leads:lead-list' %}'>Go back to leads</a>
         <hr />
         <div class="py-5 border-t border-gray-300">
