--- a/leads/templates/leads/assign_agent.html
+++ b/leads/templates/leads/assign_agent.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
-    <a href='{% url 'leads:lead-list' %}'>Go back to leads</a>
 
+  <div class="max-w-lg mx-auto px-5">
+    <a class="hover:text-blue-500"href='{% url 'leads:lead-list' %}'>Go back to leads</a>
     <hr />
-    <h1>Assign an agent to this lead</h1>
+    <div class="py-5 border-t border-gray-300">
+      <h1 class="text-4xl text-gray-800">Assign an agent to this lead</h1>
+    </div>
     
-    <form method='post'>
+    <form method='post' class="mt-5">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form | crispy }}
             <button type='submit' class="mt-3 flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">
                 submit
             </button>
         {% comment %} <button type='submit'>submit</button> {% endcomment %}
     </form>
+  </div>
 {% endblock content %}
