--- a/templates/landing.html
+++ b/templates/landing.html
@@ -11,8 +11,9 @@
             This simple CRM app helps you manage leads/agents depending on user role.
         </p>
         <div class="flex justify-center">
-          <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
-          <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
+          {% if not request.user.is_authenticated %}
+            <a href="{% url 'login' %}" class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Login</a>
+          {% endif %}
         </div>
       </div>
     </div>
