--- a/agents/templates/agents/agent_list.html
+++ b/agents/templates/agents/agent_list.html
@@ -27,7 +27,7 @@
                                 {{ agent.user.username }}
                             </h2>
                             <p class="leading-relaxed text-base">
-                                Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.
+                                {{ lead.description }}
                             </p>
                             <a href="{% url "agents:agent-detail" agent.pk %}" class="mt-3 text-indigo-500 inline-flex items-center">
                                 View this agent
