--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -30,8 +30,7 @@
                                 <h2 class="text-gray-900 text-lg title-font font-medium mb-3">
                                     {{ lead.first_name }} {{ lead.last_name }}
                                 </h2>
-                                <p class="leading-relaxed text-base">
-                                    Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.
+                                <p class="leading-relaxed text-base">{{ lead.description }}
                                 </p>
                                 <a href="{% url 'leads:lead-detail' lead.pk %}" class="mt-3 text-indigo-500 inline-flex items-center">
                                     View this lead
