--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
     <script src="{% static 'js/script.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/tailwind-output.css' %}">
+    
+    <script src="//unpkg.com/alpinejs" defer></script>
+    
+    <script src="https://cdn.tailwindcss.com"></script>
 
     {% comment %} <script src="https://cdn.tailwindcss.com"></script> {% endcomment %}
 
