fix password reset and add email support for password reset

--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 
-<h1>Password reset complete</h1>
-
-<p>You have successfully reset your password. Click <a href="{% url "login" %}">here</a> to login</p>
+<div class="max-w-lg mx-auto px-5">
+  <h1>Password reset complete</h1>
+  <p>You have successfully reset your password. Click <a href="{% url "login" %}">here</a> to login</p>
+</div>
 
 {% endblock content %}
