--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="max-w-lg mx-auto">
+<div class="max-w-lg mx-auto px-5">
     <h1 class="text-4xl text-gray-800">Reset your password</h1>
     <form method="post" class="mt-5">
         {% csrf_token %}
