--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<div class="max-w-lg mx-auto px-5">
     <article>
         <h2>Password Reset Email Sent</h2>
         <p>We have sent you an email with instructions on how to reset your password.</p>
     </article>
+</div>
 
 {% endblock content %}
